[package]
name = "albumgallery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
confy = "0.5.1"
glob = "0.3.1"
image = "0.24.6"
lofty = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
